<resources>
    <string name="app_name">Equinos-QI</string>
    <string name="title_activity_controle_remoto">ControleRemoto</string>
    <string name="enviarControle">Enviar</string>
    <string name="desconectar">desconectar</string>
    <string name="cliente_criado">Cliente criado</string>
    <string name="servidor_criado">Servidor criado</string>
    <string name="controle_ativo">Controle ativado</string>
    <string name="controle_inativo">Controle desativado</string>
    <string name="ip_invalido">Insira um IP válido!!!</string>
    <string name="comecar">Pronto para começar</string>
    <string name="qtd_de_quest_es">Quantidade de questões</string>
    <string name="informacao1">
        Este campo dirá quantas ensaios o equino deverá completar para terminar terminar o teste
    </string>
    <string name="informacao2">
        Definir tempo de intervalo entre os ensaios em que o tablet mestre permanece escuro
    </string>
    <string name="informacao3">
        Este é o tempo de aparição das imagens nos secundários após a imagem do mestre ter aparecido
    </string>
    <string name="intervalo">Intervalo</string>
    <string name="intervalo2">Segundo intervalo</string>
    <string name="configurar_teste">Configurar teste</string>
    <string name="som1">som 1</string>
    <string name="som2">som 2</string>
    <string name="som_de_erro">Som de erro:</string>
    <string name="som3">som 3</string>
    <string name="som_de_acerto">Som de acerto</string>
    <string name="seleciona_a_categoria">Seleciona a categoria:</string>
    <string name="formas">Formas</string>
    <string name="tamanho">Tamanho</string>
    <string name="preenchimento">Preenchimento</string>
    <string name="configurarteste">Configurar Teste</string>
    <string name="title_activity_definir">Definir</string>
    <string name="quem_eu_sou">Quem sou eu?</string>
    <string name="mestre">Mestre</string>
    <string name="escravo">Secundário</string>
    <string name="remoto">Remoto</string>
    <string name="servidor">Criar Mestre</string>
    <string name="precisa_configurar">Voce precida configurar um teste</string>
    <string name="precisa_cliente">Você precisa informar um ip</string>
    <string name="com_ecar">comecar</string>
    <string name="ip_para_conecao">Ip para conexão:</string>
    <string name="esperando">esperando...</string>
    <string name="criar_cliente">Criar secundário</string>
    <string name="pronto_para_criar">Pronto para criar</string>
    <string name="controle_remoto">Controle Remoto</string>
    <string name="iniciar_controle_remoto">Iniciar controle remoto</string>
    <string name="cadastrar_equino">Cadastrar equino</string>
    <string name="nome">Nome</string>
    <string name="idade">Idade</string>
    <string name="raca">Raça</string>
    <string name="detalhes">Observações</string>
    <string name="cadastrar">cadastrar</string>
    <string name="cancelar">cancelar</string>
    <string name="logoff">logoff</string>
    <string name="conectar">Estabelecer conexão</string>
    <string name="escolha_uma_configura_o">Escolha uma configuração:</string>
    <string name="exp_andamento">Experimentos em andamento</string>
    <string name="exp_finalizado">Experimentos finalizados</string>

    <!--Spnner ativities -->
    <string-array name="ativities_array">
        <item>Equitação (escola)</item>
        <item>Passeio</item>
        <item>Enduro</item>
        <item>Vaquejada</item>
        <item>Tambores</item>
        <item>Lida pecuária</item>
        <item>Militar</item>
        <item>Equoterapia</item>
        <item>Adestramento</item>
        <item>Volteio</item>
        <item>Corrida/Turfe</item>
    </string-array>
    <!--Spnner raças -->
    <string-array name="racas_array">
        <item>Quarto de milha</item>
        <item>Crioulo</item>
        <item>Campolina</item>
        <item>Andaluz</item>
        <item>Puro sangue Inglês</item>
        <item>Árabe</item>
        <item>Mangalarga</item>
        <item>Brasileiro de hipismo</item>
        <item>Pônei brasileiro</item>
        <item>Piquira</item>
        <item>Paint horse</item>
        <item>Lusitano</item>
        <item>Appaloosa</item>
    </string-array>
    <!--Spnner raças -->

    <string-array name="qtdDesafios_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="qtdEnsaios_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="x1">1x</string>
    <string name="x2">2x</string>
    <string name="x3">3x</string>
    <string name="x4">4x</string>
    <string name="x5">5x</string>
    <string name="x6">6x</string>
    <string name="x7">7x</string>
</resources>
