<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bolsista.novatentativa.banco.CadastrarCavalo"
    android:orientation="vertical"
    android:gravity="top"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar_equino"
            android:textSize="40sp"
            android:paddingVertical="30sp"
            android:fontFamily="casual"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="40sp"
        >

            <EditText
                android:id="@+id/nomeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                />


            <EditText
                android:id="@+id/idadeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/idade"
                android:inputType="number"
                />


            <EditText
                android:id="@+id/racaTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/raca"
                />

            <EditText
                android:id="@+id/detalhesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/detalhes"
                />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/cancelarBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            >

        </Button>

        <Button
            android:id="@+id/cadastrarCavaloBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            >

        </Button>

    </LinearLayout>

</LinearLayout>
