<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.bolsista.novatentativa.arquitetura.Servidor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:paddingVertical="20sp"
        android:text="@string/servidor"
        android:textSize="35sp" />

    <LinearLayout
        android:id="@+id/serverDiv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:paddingVertical="10sp"
            android:text="@string/pronto_para_criar"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <Button
            android:id="@+id/criarServerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/servidor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textViewDefinir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/ip_para_conecao"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ipTextView"
                style="@style/textViewDefinir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esperando"
                android:textColor="@color/vermelhoo"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/comecarServerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/com_ecar"

            />

    </LinearLayout>


</LinearLayout>
