<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bolsista.novatentativa.arquitetura.Remoto"
    android:orientation="vertical"
    android:gravity="top"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:paddingVertical="20sp"
        android:text="@string/controle_remoto"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/infoIpTextRemoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:paddingVertical="10sp"
            android:text="@string/precisa_cliente"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/remotoEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:text="192.168.4.2"
            />

        <Button
            android:id="@+id/criarRemotoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_controle_remoto"
            android:background="@color/laranja"
            android:padding="10sp"
            />

        <Button
            android:id="@+id/comecarRemotoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/com_ecar"
            android:background="@color/verde_claro"
            />

    </LinearLayout>

</LinearLayout>
