<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bolsista.novatentativa.arquitetura.ClienteActivity"
    android:orientation="vertical"
    android:gravity="top"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:paddingVertical="20sp"
        android:text="@string/criar_cliente"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/infoIpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:paddingVertical="10sp"
            android:text="@string/precisa_cliente"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ipClientEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:text="192.168.4.2"
            />

        <Button
            android:id="@+id/criarClientBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/criar_cliente"
            android:background="@color/laranja"
            android:padding="10sp"
            />

        <Button
            android:id="@+id/comecarClientBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/com_ecar"
            android:background="@color/verde_claro"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/identificacaoCliente"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Eu sou o dispositivo:"
                android:gravity="center"
                android:textColor="@color/preto"
                android:fontFamily="casual"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/numIdentificacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:gravity="center"
                android:textColor="@color/preto"
                android:fontFamily="casual"
                android:textSize="20sp"
                android:paddingLeft="10sp"
                />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
